added auth + simple dashboard

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "next-app-template",
+  "name": "fluxify",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@heroui/accordion": "2.2.24",
     "@heroui/alert": "2.2.27",
     "@heroui/autocomplete": "2.3.29",
@@ -34,6 +38,7 @@
     "@heroui/popover": "2.3.27",
     "@heroui/progress": "2.2.22",
     "@heroui/radio": "2.3.27",
+    "@heroui/react": "^2.8.5",
     "@heroui/react-utils": "2.1.14",
     "@heroui/scroll-shadow": "2.3.18",
     "@heroui/select": "2.4.28",
@@ -49,22 +54,32 @@
     "@heroui/toast": "2.0.17",
     "@heroui/tooltip": "2.2.24",
     "@heroui/user": "2.2.22",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
+    "@prisma/extension-accelerate": "^3.0.0",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.28",
+    "bcryptjs": "^3.0.3",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.554.0",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "0.4.6",
+    "pg": "^8.16.3",
+    "prisma": "^7.0.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.32.1",
     "@tailwindcss/postcss": "4.1.11",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "20.5.7",
+    "@types/pg": "^8.15.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
