--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ yarn-error.log*
 # local env files
 .env*.local
 
+.env
+
 # vercel
 .vercel
 
@@ -38,3 +40,4 @@ pnpm-lock.yaml
 yarn.lock
 package-lock.json
 bun.lockb
+/app/generated/prisma
