--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@heroui/accordion": "2.2.24",
     "@heroui/alert": "2.2.27",
     "@heroui/autocomplete": "2.3.29",
@@ -61,6 +64,7 @@
     "@react-aria/visually-hidden": "3.8.28",
     "bcryptjs": "^3.0.3",
     "clsx": "2.1.1",
+    "dompurify": "^3.3.0",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.554.0",
@@ -78,6 +82,7 @@
     "@react-types/shared": "3.32.1",
     "@tailwindcss/postcss": "4.1.11",
     "@types/bcryptjs": "^3.0.0",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "20.5.7",
     "@types/pg": "^8.15.6",
     "@types/react": "18.3.3",
