--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "prisma": "^7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
