variants, orders, cart update

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint --fix",
-    "test": "vitest",
+    "test": "npm run test:unit && npm run test:components",
+    "test:unit": "bun test tests/edge-cases.test.ts tests/session-features.test.ts tests/order-display.test.ts",
+    "test:components": "vitest run tests/components",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "prisma:generate": "prisma generate",
