--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    // "typescript.tsdk": "node_modules/typescript/lib",
-    "typescript.experimental.useTsgo": true
+    "typescript.tsdk": "node_modules/typescript/lib",
+    // "typescript.experimental.useTsgo": true
 }
