--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,12 +29,16 @@ jobs:
 
       - name: Generate Prisma Client
         run: bunx prisma generate
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Run linting
         run: bun run lint
 
       - name: Run tests
         run: bun run test
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
   build:
     runs-on: ubuntu-latest
