--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "ioredis": "^5.9.1",
+    "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.8",
     "next-auth": "^5.0.0-beta.30",
