--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@tiptap/extension-underline": "^3.18.0",
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
+    "@types/sanitize-html": "^2.16.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "clsx": "2.1.1",
@@ -83,7 +84,6 @@
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "ioredis": "^5.9.1",
-    "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.8",
     "next-auth": "^5.0.0-beta.30",
@@ -92,6 +92,8 @@
     "prisma": "^7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "resend": "^6.9.1",
+    "sanitize-html": "^2.17.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
