--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-dom": "18.3.1",
     "resend": "^6.9.1",
     "sanitize-html": "^2.17.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
