--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
     "@types/sanitize-html": "^2.16.0",
+    "baseline-browser-mapping": "^2.9.19",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "clsx": "2.1.1",
