--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "prisma": "^7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "recharts": "^3.7.0",
     "resend": "^6.9.1",
     "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.4.0",
