--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "recharts": "^3.7.0",
     "resend": "^6.9.1",
     "sanitize-html": "^2.17.0",
+    "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
